--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ header{
     width: 100%;
     height: 10vw;
     background: linear-gradient(black, red);
-    opacity: 75%;
+    opacity: 85%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,10 +20,11 @@ main{
 }
 h1{
     color: red;
+    opacity: 1;
 }
 .card{
     margin: 50px;
-    opacity: 80%;
+    opacity: 85%;
 }
 
 .navbar-toggler{
@@ -41,7 +42,7 @@ h1{
 nav{
     background-color: red;
     border-bottom: solid black 2px;
-    opacity: 75%;
+    opacity: 85%;
     position: relative;
     z-index: 1;
 }
@@ -53,6 +54,10 @@ table{
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+a{
+    font-size:1.2em;
+    color: black;
 }
 @media screen and (max-width: 128px){
     .titre{
